[workspace]

resolver = "3"

members = ["udled-macros", "udled", "udled-tokenizers", "geom"]


[workspace.package]
edition = "2021"
keywords = ["parser", "lexer"]
categories = ["parsing", "no-std"]
authors = ["Rasmus Kildevæld <rasmuskildevaeld@gmail.com>"]
repository = "https://github.com/kildevaeld/udled-rs"
license = "MIT"
rust-version = "1.81.0"
