[package]
name = "geom"
version = "0.1.0"
edition.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["geo-types"]
geo-types = ["dep:geo-types", "dep:geo-traits"]

[dependencies]
udled = { path = "../udled", features = ["binary"] }
geo-types = { version = "0.7", optional = true }
geo-traits = { version = "0.3", optional = true }
byteorder = { version = "1" }
geozero = { version = "0.14", features = ["with-wkb"] }
