[package]
name = "geom"
version = "0.1.0"
edition.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
geo-types = ["dep:geo-traits"]

[dependencies]
udled = { path = "../udled", features = ["binary"] }
udled-tokenizers = { path = "../udled-tokenizers" }

geo-traits = { version = "0.3", optional = true }
byteorder = { version = "1" }
