[package]
name = "udled-macros"
version = "0.1.0"
edition.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true


description = "Macros for udled"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2" }
quote = "1"
proc-macro2 = "1"
darling = "0.21"
