[package]
name = "udled-tokenizers"
version = "0.3.0"

edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
repository.workspace = true

readme = "README.md"
description = "Tokenizers for udled"

[features]
serde = ["dep:serde"]

[dependencies]
unicode-segmentation = "1"
udled = { path = "../udled", version = "0.4" }
serde = { version = "1", default-features = false, features = [
    "derive",
], optional = true }
