[package]
name = "udled-tokenizers"
version = "0.4.0"
edition.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

readme = "README.md"
description = "Tokenizers for udled"

[dependencies]
udled = { path = "../udled", version = "0.6" }
