[package]
name = "udled"
version = "0.3.1"

edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
repository.workspace = true

readme = "README.md"
description = "Tokenizer and parser"

[features]
default = []
std = ["serde?/std"]
serde = ["dep:serde"]
macros = ["udled-macros"]


[dependencies]
unicode-segmentation = "1"
serde = { version = "1", default-features = false, features = [
    "derive",
], optional = true }
udled-macros = { path = "../udled-macros", version = "0.1.0", optional = true }
