[package]
name = "udled"
version = "0.6.0"
edition.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
