[package]
name = "udled"
version = "0.6.0"
edition.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["byteorder"]
serde = ["dep:serde"]
macros = ["udled-macros"]


[dependencies]
udled-macros = { path = "../udled-macros", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
byteorder = { version = "1", optional = true }


[dev-dependencies]
geo-types = { version = "*" }
geo-traits = { version = "*" }
